--- a/src/main/resources/com/sprint2/gui/style.css
+++ b/src/main/resources/com/sprint2/gui/style.css
@@ -1,10 +1,11 @@
+
 @font-face {
-   
+
 	font-family: 'Dancing Script', cursive;
     src: url('DancingScript-Bold.ttf');
 }
 
-.text {
+# logo  {
     -fx-font-family: DancingScript-Bold
 }
 
@@ -19,5 +20,11 @@
     -fx-border-color: #af4345;
     -fx-border-style: dashed;
     -fx-border-width: 2px;
+
+}
+
+#closeBtn{
+    -fx-background-color: transparent;
+
 
 }
