--- a/src/main/resources/com/sprint2/gui/LoginAs.fxml
+++ b/src/main/resources/com/sprint2/gui/LoginAs.fxml
@@ -6,33 +6,42 @@
 
 <AnchorPane fx:id="loginAs" minHeight="450.0" minWidth="700.0" prefHeight="570.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sprint2.gui.LoginAsController">
    <children>
-      <Label fx:id="welcomeLabel" layoutX="101.0" layoutY="17.0" prefHeight="65.0" prefWidth="200.0" text="" AnchorPane.topAnchor="17.0">
+      <Label fx:id="welcomeLabel" layoutX="101.0" layoutY="17.0" prefHeight="65.0" prefWidth="200.0" AnchorPane.topAnchor="17.0">
          <font>
             <Font size="14.0" />
          </font></Label>
-      <Button fx:id="hostButton" layoutX="100.0" layoutY="95.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="130.0" prefWidth="260.0" style="-fx-background-color: #6d9eebff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Host Staff" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="95.0">
+      <Button fx:id="hostButton" layoutX="102.0" layoutY="146.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #6d9eebff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Host Staff" AnchorPane.leftAnchor="102.0" AnchorPane.topAnchor="146.0">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button fx:id="waiterButton" layoutX="460.0" layoutY="95.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" onAction="#onWaiterButton" prefHeight="130.0" prefWidth="260.0" style="-fx-background-color: #f55e61ff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Wait Staff" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="95.0">
+      <Button layoutX="460.0" layoutY="146.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" onAction="#onWaiterButton" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #f55e61ff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Wait Staff" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="146.0">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button fx:id="kitchenButton" layoutX="100.0" layoutY="260.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="130.0" prefWidth="260.0" style="-fx-background-color: #ffd966ff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Kitchen Staff" AnchorPane.leftAnchor="100.0">
+      <Button fx:id="kitchenButton" layoutX="100.0" layoutY="293.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #ffd966ff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Kitchen Staff" AnchorPane.leftAnchor="100.0">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button fx:id="busButton" layoutX="460.0" layoutY="260.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="130.0" prefWidth="260.0" style="-fx-background-color: #93c47dff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Bus Staff" AnchorPane.rightAnchor="100.0">
+      <Button fx:id="busButton" layoutX="460.0" layoutY="293.0" maxHeight="130.0" maxWidth="260.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="260.0" style="-fx-background-color: #93c47dff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Bus Staff" AnchorPane.rightAnchor="100.0">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button fx:id="managerButton" layoutX="255.0" layoutY="330.0" maxHeight="130.0" maxWidth="300.0" mnemonicParsing="false" prefHeight="130.0" prefWidth="300.0" style="-fx-background-color: #8e7cc3ff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Manager" AnchorPane.bottomAnchor="20.0">
+      <Button fx:id="managerButton" layoutX="255.0" layoutY="330.0" maxHeight="130.0" maxWidth="300.0" mnemonicParsing="false" prefHeight="117.0" prefWidth="300.0" style="-fx-background-color: #8e7cc3ff; -fx-border-color: black; -fx-background-radius: 15px; -fx-border-radius: 15px;" text="Manager" AnchorPane.bottomAnchor="20.0">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button fx:id="logout" alignment="CENTER" contentDisplay="CENTER" layoutX="683.6" layoutY="18.0" maxHeight="60.0" maxWidth="110.0" mnemonicParsing="false" onAction="#onLogOutButton" prefHeight="60.0" prefWidth="110.0" style="-fx-background-color: #f9cb9cff; -fx-border-color: black; -fx-background-radius: 10px; -fx-border-radius: 10px;" text="Log Out" textAlignment="CENTER" wrapText="true" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="18.0">
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="683.6" layoutY="18.0" maxHeight="60.0" maxWidth="110.0" mnemonicParsing="false" onAction="#onLogOutButton" prefHeight="60.0" prefWidth="110.0" style="-fx-background-color: #f9cb9cff; -fx-border-color: black; -fx-background-radius: 10px; -fx-border-radius: 10px;" text="Log Out" textAlignment="CENTER" wrapText="true" AnchorPane.rightAnchor="26.0" AnchorPane.topAnchor="18.0">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
+      <Button fx:id="clockInOutButton" layoutX="360.0" layoutY="14.0" onAction="#onClockInBtn" prefHeight="60.0" prefWidth="100.0" style="-fx-border-color: black; -fx-background-radius: 10px; -fx-border-radius: 10px;" text="Clock In" AnchorPane.topAnchor="18.0">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
+      <Label fx:id="clockInOutLbl" layoutX="300.0" layoutY="100.0">
+         <font>
+            <Font size="13.0" />
+         </font></Label>
+
    </children>
 </AnchorPane>
