--- a/src/main/resources/com/sprint2/gui/EmployeeProfile-view.fxml
+++ b/src/main/resources/com/sprint2/gui/EmployeeProfile-view.fxml
@@ -3,14 +3,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="570.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sprint2.gui.EmployeeProfileEditorController">
+<AnchorPane prefHeight="570.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sprint2.gui.EmployeeProfileEditorController">
     <children>
         <Pane layoutX="5.0" layoutY="49.0" prefHeight="513.0" prefWidth="535.0" style="-fx-background-radius: 60px; -fx-background-color: #8e7cc3ff;">
          <children>
             <TableView fx:id="employeeTable" layoutX="40.0" layoutY="30.0" prefHeight="450.0" prefWidth="450.0">
               <columns>
-                <TableColumn fx:id="employee" minWidth="20.0" prefWidth="150.0" text="Employee" />
-                <TableColumn fx:id="role" prefWidth="300.0" text="Role" />
+                <TableColumn fx:id="employee" minWidth="20.0" prefWidth="81.40000915527344" text="Employee" />
+                <TableColumn fx:id="role" prefWidth="367.60001373291016" text="Role" />
               </columns>
             </TableView>
          </children></Pane>
