--- a/src/main/resources/com/sprint2/gui/Menu-view.fxml
+++ b/src/main/resources/com/sprint2/gui/Menu-view.fxml
@@ -246,7 +246,7 @@
          </children></Pane>
       <Button layoutX="531.0" layoutY="538.0" mnemonicParsing="false" onAction="#onGoBackBtn" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" text="Go Back" />
       <GridPane gridLinesVisible="true" layoutX="603.0" prefHeight="570.0" prefWidth="222.0" style="-fx-background-color: #f58f8fff; -fx-grid-lines-color: #af4345; -fx-border-color: #af4345;" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <Label fx:id="itemNameLbl" text="Label" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+         <Label fx:id="itemNameLbl" text="Item" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
             <font>
                <Font size="14.0" />
             </font></Label>
@@ -260,13 +260,13 @@
                   <Group layoutX="9.0" layoutY="40.0">
                      <children>
                         <Label layoutX="9.0" layoutY="-35.0" prefHeight="17.0" prefWidth="112.0" text="Choose Protein" />
-                        <RadioButton layoutY="-7.0" mnemonicParsing="false" text="Chicken">
+                        <RadioButton fx:id="chickenProtein" layoutY="-7.0" mnemonicParsing="false" text="Chicken">
                            <toggleGroup>
                               <ToggleGroup fx:id="Protein" />
                            </toggleGroup></RadioButton>
-                        <RadioButton layoutY="16.0" mnemonicParsing="false" text="Pork" toggleGroup="$Protein" />
-                        <RadioButton layoutY="40.0" mnemonicParsing="false" text="Ham" toggleGroup="$Protein" />
-                        <RadioButton layoutY="64.0" mnemonicParsing="false" text="None" toggleGroup="$Protein" />
+                        <RadioButton fx:id="porkProtein" layoutY="16.0" mnemonicParsing="false" text="Pork" toggleGroup="$Protein" />
+                        <RadioButton fx:id="hamProtein" layoutY="40.0" mnemonicParsing="false" text="Ham" toggleGroup="$Protein" />
+                        <RadioButton fx:id="noneProtein" layoutY="64.0" mnemonicParsing="false" text="None" toggleGroup="$Protein" />
                      </children>
                   </Group>
                </children></Pane>
@@ -275,24 +275,24 @@
                   <Group layoutX="19.0" layoutY="11.0">
                      <children>
                         <Label layoutX="5.0" layoutY="-4.0" text="Choose Sauce" />
-                        <RadioButton layoutX="-8.0" layoutY="25.0" mnemonicParsing="false" text="Carolina Gold">
+                        <RadioButton fx:id="carolinaGoldSauce" layoutX="-8.0" layoutY="25.0" mnemonicParsing="false" text="Carolina Gold">
                            <toggleGroup>
                               <ToggleGroup fx:id="Sauce" />
                            </toggleGroup></RadioButton>
-                        <RadioButton layoutX="-8.0" layoutY="50.0" mnemonicParsing="false" text="Jim Beam" toggleGroup="$Sauce" />
-                        <RadioButton layoutX="-8.0" layoutY="75.0" mnemonicParsing="false" text="Blue Cheese" toggleGroup="$Sauce" />
-                        <RadioButton layoutX="95.0" layoutY="50.0" mnemonicParsing="false" text="Ranch" toggleGroup="$Sauce" />
-                        <RadioButton layoutX="95.0" layoutY="25.0" mnemonicParsing="false" text="Buffalo" toggleGroup="$Sauce" />
-                        <RadioButton layoutX="95.0" layoutY="100.0" mnemonicParsing="false" text="None" toggleGroup="$Sauce" />
-                        <RadioButton layoutX="-8.0" layoutY="100.0" mnemonicParsing="false" text="BBQ" toggleGroup="$Sauce" />
-                        <RadioButton layoutX="95.0" layoutY="75.0" mnemonicParsing="false" text="Chipotle" toggleGroup="$Sauce" />
+                        <RadioButton fx:id="jimBeamSauce" layoutX="-8.0" layoutY="50.0" mnemonicParsing="false" text="Jim Beam" toggleGroup="$Sauce" />
+                        <RadioButton fx:id="blueCheeseSauce" layoutX="-8.0" layoutY="75.0" mnemonicParsing="false" text="Blue Cheese" toggleGroup="$Sauce" />
+                        <RadioButton fx:id="ranchSauce" layoutX="95.0" layoutY="50.0" mnemonicParsing="false" text="Ranch" toggleGroup="$Sauce" />
+                        <RadioButton fx:id="buffaloSauce" layoutX="95.0" layoutY="25.0" mnemonicParsing="false" text="Buffalo" toggleGroup="$Sauce" />
+                        <RadioButton fx:id="noneSauce" layoutX="95.0" layoutY="100.0" mnemonicParsing="false" text="None" toggleGroup="$Sauce" />
+                        <RadioButton fx:id="bbqSauce" layoutX="-8.0" layoutY="100.0" mnemonicParsing="false" text="BBQ" toggleGroup="$Sauce" />
+                        <RadioButton fx:id="chipotleSauce" layoutX="95.0" layoutY="75.0" mnemonicParsing="false" text="Chipotle" toggleGroup="$Sauce" />
                      </children>
                   </Group>
                </children></Pane>
                   <GridPane gridLinesVisible="true" layoutX="14.0" layoutY="300.0" prefHeight="140.0" prefWidth="195.0" style="-fx-background-color: #f4ccccff; -fx-grid-lines-color: #af4345;">
 
                         <Label prefHeight="31.0" prefWidth="163.0" style="-fx-background-color: #f4ccccff;" text="Other" BorderPane.alignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-               <TextArea prefHeight="126.0" prefWidth="200.0" promptText="Add description" style="-fx-control-inner-background: #f4ccccff;" GridPane.rowIndex="1" />
+               <TextArea fx:id="comments" prefHeight="126.0" prefWidth="200.0" promptText="Add description" style="-fx-control-inner-background: #f4ccccff;" text=" " GridPane.rowIndex="1" />
                <columnConstraints>
                   <ColumnConstraints />
                </columnConstraints>
@@ -318,7 +318,7 @@
 
       </GridPane>
       <Button layoutX="8.0" layoutY="6.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="71.0" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" text="Cancel" />
-      <Button layoutX="126.0" layoutY="5.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="96.0" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" text="Place Order" />
+      <Button layoutX="126.0" layoutY="5.0" mnemonicParsing="false" onAction="#onPlaceOrderBtn" prefHeight="32.0" prefWidth="96.0" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" text="Place Order" />
       <Button layoutX="491.0" layoutY="5.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="96.0" style="-fx-background-color: #f58f8fff; -fx-border-color: #af4345;" text="View Order" />
 
    </children>
