Can set title and text of dynamically generated logs

--- a/src/main/resources/com/sprint2/gui/ActivityLogTemplate.fxml
+++ b/src/main/resources/com/sprint2/gui/ActivityLogTemplate.fxml
@@ -9,14 +9,14 @@
 
 <VBox fx:id="activityLogTemplate" style="-fx-background-color: #8e7cc3ff;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Default log title" textAlignment="CENTER">
+      <Label id="title" text="Default log title" textAlignment="CENTER">
          <font>
             <Font size="32.0" />
          </font>
       </Label>
       <AnchorPane>
          <children>
-            <Label alignment="TOP_LEFT" style="-fx-background-color: #d9d2e9ff;" text="Default log text" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <Label id="text" alignment="TOP_LEFT" style="-fx-background-color: #d9d2e9ff;" text="Default log text" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <font>
                   <Font size="16.0" />
                </font>
