--- a/src/main/resources/com/sprint2/gui/EmployeeProfile-view.fxml
+++ b/src/main/resources/com/sprint2/gui/EmployeeProfile-view.fxml
@@ -1,22 +1,86 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="570.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sprint2.gui.EmployeeProfileEditorController">
+<AnchorPane prefHeight="570.0" prefWidth="820.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sprint2.gui.EmployeeProfileEditorController">
     <children>
-        <Pane layoutX="5.0" layoutY="49.0" prefHeight="513.0" prefWidth="535.0" style="-fx-background-radius: 60px; -fx-background-color: #8e7cc3ff;">
-         <children>
-            <TableView fx:id="employeeTable" layoutX="40.0" layoutY="30.0" prefHeight="450.0" prefWidth="450.0">
-              <columns>
-                  <TableColumn fx:id="id" prefWidth="50.0" text="ID" />
-                <TableColumn fx:id="employee" minWidth="20.0" prefWidth="250.0" text="Employee" />
-                <TableColumn fx:id="role" prefWidth="150.0" text="Role" />
-              </columns>
-            </TableView>
-         </children></Pane>
-        <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#onGoBackBtn" style="-fx-background-color: #b4a7d6ff; -fx-border-color: #9900ff;" text="Go Back" />
-      <Pane layoutX="595.0" prefHeight="570.0" prefWidth="225.0" style="-fx-background-color: #b4a7d6ff; -fx-border-color: #9900ff; -fx-border-width: 2;" />
+      <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <right>
+            <BorderPane style="-fx-background-color: #b4a7d6ff; -fx-border-color: #9900ff;" BorderPane.alignment="CENTER">
+               <top>
+                  <Label alignment="CENTER" text="Employee Profiles" textAlignment="CENTER" underline="true" BorderPane.alignment="CENTER">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+               </top>
+               <padding>
+                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+               </padding>
+               <center>
+                  <VBox alignment="TOP_CENTER" spacing="20.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#onEditProfile" style="-fx-background-color: #f3f3f3ff; -fx-border-color: #9900ff; -fx-background-radius: 11; -fx-border-radius: 10;" text="Edit Profile" textAlignment="CENTER">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#onDeleteProfile" style="-fx-background-color: #f3f3f3ff; -fx-border-color: #9900ff; -fx-background-radius: 11; -fx-border-radius: 10;" text="Delete Profile" textAlignment="CENTER">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#onCreateProfile" style="-fx-background-color: #f3f3f3ff; -fx-border-color: #9900ff; -fx-background-radius: 11; -fx-border-radius: 10;" text="Create Profile" textAlignment="CENTER">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                     <BorderPane.margin>
+                        <Insets top="35.0" />
+                     </BorderPane.margin>
+                  </VBox>
+               </center>
+            </BorderPane>
+         </right>
+         <center>
+            <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <top>
+                    <Button mnemonicParsing="false" onAction="#onGoBackBtn" style="-fx-background-color: #b4a7d6ff; -fx-border-color: #9900ff;" text="Go Back" BorderPane.alignment="TOP_LEFT">
+                     <BorderPane.margin>
+                        <Insets left="15.0" right="15.0" top="15.0" />
+                     </BorderPane.margin>
+                  </Button>
+               </top>
+               <center>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #8e7cc3ff; -fx-background-radius: 60;" BorderPane.alignment="CENTER">
+                     <BorderPane.margin>
+                        <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                     </BorderPane.margin>
+                     <children>
+                        <TableView fx:id="employeeTable" prefHeight="450.0" prefWidth="450.0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
+                          <columns>
+                              <TableColumn fx:id="id" prefWidth="50.0" text="ID" />
+                            <TableColumn fx:id="employee" minWidth="20.0" prefWidth="250.0" text="Employee" />
+                            <TableColumn fx:id="role" prefWidth="150.0" text="Role" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+               </center>
+            </BorderPane>
+         </center>
+      </BorderPane>
+        <Pane layoutX="5.0" layoutY="49.0" prefHeight="513.0" prefWidth="535.0" style="-fx-background-radius: 60px; -fx-background-color: #8e7cc3ff;" visible="false" />
 
     </children>
 </AnchorPane>
